[gd_scene load_steps=26 format=2]

[ext_resource path="res://engine/sprites/objects/door/blue/sBlueDoor_0.png" type="Texture" id=1]
[ext_resource path="res://engine/scenes/objects/door/Door.gd" type="Script" id=2]
[ext_resource path="res://engine/sprites/objects/door/tlDoor.png" type="Texture" id=3]
[ext_resource path="res://engine/sprites/objects/door/blue/sBlueDoor_1.png" type="Texture" id=4]
[ext_resource path="res://engine/sprites/objects/door/blue/sBlueDoor_3.png" type="Texture" id=5]
[ext_resource path="res://engine/sprites/objects/door/blue/sBlueDoor_2.png" type="Texture" id=6]
[ext_resource path="res://engine/sprites/objects/door/yellow/sYellowDoor_3.png" type="Texture" id=7]
[ext_resource path="res://engine/sprites/objects/door/green/sGreenDoor_3.png" type="Texture" id=8]
[ext_resource path="res://engine/sprites/objects/door/green/sGreenDoor_2.png" type="Texture" id=9]
[ext_resource path="res://engine/sprites/objects/door/green/sGreenDoor_1.png" type="Texture" id=10]
[ext_resource path="res://engine/sprites/objects/door/yellow/sYellowDoor_1.png" type="Texture" id=11]
[ext_resource path="res://engine/sprites/objects/door/green/sGreenDoor_0.png" type="Texture" id=12]
[ext_resource path="res://engine/sprites/objects/door/red/sRedDoor_0.png" type="Texture" id=13]
[ext_resource path="res://engine/sprites/objects/door/red/sRedDoor_1.png" type="Texture" id=14]
[ext_resource path="res://engine/sprites/objects/door/red/sRedDoor_3.png" type="Texture" id=15]
[ext_resource path="res://engine/sprites/objects/door/yellow/sYellowDoor_0.png" type="Texture" id=16]
[ext_resource path="res://engine/sprites/objects/door/yellow/sYellowDoor_2.png" type="Texture" id=17]
[ext_resource path="res://engine/sprites/objects/door/red/sRedDoor_2.png" type="Texture" id=18]
[ext_resource path="res://engine/classes/RoomPhysicsBody2DDamageable.gd" type="Script" id=19]
[ext_resource path="res://engine/classes/RoomCollisionArea.gd" type="Script" id=20]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ) ],
"loop": false,
"name": "blue_close",
"speed": 20.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "blue_open",
"speed": 20.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": false,
"name": "green_close",
"speed": 20.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": false,
"name": "green_open",
"speed": 20.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 13 ) ],
"loop": false,
"name": "red_close",
"speed": 20.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 18 ), ExtResource( 15 ) ],
"loop": false,
"name": "red_open",
"speed": 20.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 16 ) ],
"loop": false,
"name": "yellow_close",
"speed": 20.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 7 ) ],
"loop": false,
"name": "yellow_open",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 28, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 8, 0, 48, 64 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 28, 32 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 3, 28 )

[node name="Door" type="StaticBody2D"]
collision_layer = 524288
collision_mask = 15
script = ExtResource( 2 )

[node name="Cover" type="StaticBody2D" parent="."]
collision_layer = 524288
collision_mask = 15
script = ExtResource( 19 )

[node name="Sprite" type="AnimatedSprite" parent="Cover"]
position = Vector2( 12, 1 )
frames = SubResource( 9 )
animation = "blue_open"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Cover"]
position = Vector2( -12, 0 )
shape = SubResource( 6 )
script = ExtResource( 20 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, 0 )
texture = SubResource( 3 )

[node name="FullDoorArea" type="Area2D" parent="."]
collision_layer = 524288
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="FullDoorArea"]
position = Vector2( -12, 0 )
shape = SubResource( 4 )

[node name="TransitionTriggerArea" type="Area2D" parent="."]
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionTriggerArea"]
modulate = Color( 0.921569, 0, 1, 1 )
position = Vector2( -33, 0 )
shape = SubResource( 5 )

[node name="TargetSpawnPosition" type="Position2D" parent="."]
position = Vector2( -32, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 1, -20 )
polygon = PoolVector2Array( -41.0156, -12.0078, -41.0234, 52.0156, 7, 52.0156, 7, 52, -41, 52, -41, -12, 7, -12, 7, -12.0156 )
script = ExtResource( 20 )

[connection signal="damage" from="Cover" to="." method="_on_Cover_damage"]
[connection signal="body_entered" from="TransitionTriggerArea" to="." method="_on_TransitionTriggerArea_body_entered"]
